menú navar hecho

--- a/css/hojaestilo.css
+++ b/css/hojaestilo.css
@@ -3,17 +3,31 @@
     margin-top: -0;
 }
 
-#texto1 {
+#titulo1 {
     text-align: center;
     color: white;
 }
 
-.fila3 {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
+#titulo2 {
+    text-align: center;
+    color: palevioletred;
 }
 
-.tabla1, .tabla2, .tabla3 {
+.tabla {
     width: 100%;
+    border-collapse: collapse;
+}
+
+th {
+    border: 3px solid palevioletred;
+    text-align: center;
+    color: black;
+    font-size: 15px;
+}
+
+td {
+    border: 3px solid palevioletred;
+    text-align: center;
+    color: black;
+    font-size: 15px;
 }
